--- a/templates/login.html
+++ b/templates/login.html
@@ -7,28 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="stylesheet" href="/public/css/main.css" type="text/css" media="screen" charset="utf-8" />
-    <link rel="shortcut icon" href="/public/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/static/css/main.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="shortcut icon" href="/static/img/favicon.png" type="image/png">
     <script type="text/javascript" src="static/js/api.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <header>
-            <div class="container">
-                <div class="row">
-                    <!-- <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <h1><a href="/login" class="hover-color">Login to </a></h1>
-                    </div> -->
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <ul>
-
-                            <li><a href="/about" class="hover-color">Hello</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </header>
         <div class="content">
             <div class="main-background"></div>
             <div class="background-color bike-front-style">
@@ -39,6 +24,7 @@
                         <p><input type="text" name="username" required value="" pattern="[A-Za-z0-9]{5,}"
                                 title="Five or more characters(A-Z,a-z,0-9)" placeholder="Username"></p>
                         <p><input type="password" name="password" required value="" placeholder="Password"></p>
+                        <p><label class="error-label" id="error"></label></p>
                         <p class="login-button"><input type="submit" name="login" value="Login"></p>
                     </fieldset>
                 </form>
@@ -49,8 +35,18 @@
 
                         form.addEventListener("submit", function (event) {
                             event.preventDefault();
-                            status = login(form.elements["username"].value, form.elements["password"].value);
-                            alert(status);
+                            var req = new XMLHttpRequest();
+                            var creds = { "password": form.elements["password"].value, "username": form.elements["username"].value };
+                            req.open("POST", "/api/v1/login");
+                            req.onreadystatechange = function () {
+                                if (req.readyState == 4 && req.status == 200) {
+                                    window.location = "/";
+                                } else {
+                                    error = document.getElementById("error")
+                                    error.innerHTML = "Credentials are wrong"
+                                }
+                            }
+                            req.send(JSON.stringify(creds));
                         });
                     });
                 </script>
