--- a/templates/update.html
+++ b/templates/update.html
@@ -33,19 +33,24 @@
                 </div>
             </div>
         </header>
+    </div>
 
-        <div class="content">
+    <div class="content">
+        <div class="main-background"></div>
+        <div class="background-color bike-front-style">
 
             <div title="Firmware versions of sensors">
-                <ul>
-                    <li><a href="/static/sensors/sensor1">sensor1</a></li>
-                    <li><a href="/static/sensors/sensor2">sensor2</a></li>
-                </ul>
+                <input type="checkbox" id="sensor1" name="sensor1" value="sensor1">
+                <label for="sensor1"> <a href="/static/sensors/sensor1">sensor1</a> </label><br>
+                <input type="checkbox" id="sensor2" name="sensor2" value="sensor2">
+                <label for="sensor2"> <a href="/static/sensors/sensor2">sensor2</a> </label><br>
             </div>
-
         </div>
+    </div>
 
     </div>
+
+
 </body>
 
 </html>
